set (plugin_sources squash-lzma.c)

if (${CMAKE_VERSION} VERSION_LESS 2.8.9)
  find_package (PkgConfig)
  pkg_check_modules (LZMA liblzma)
  if (LZMA_FOUND)
    squash_plugin_add (lzma plugin_sources)
    if (LZMA_LIBRARIES)
      squash_plugin_add_link_libraries (lzma ${LZMA_LIBRARIES})
    endif ()
    if (LZMA_INCLUDE_DIRS)
      squash_plugin_add_include_directories (lzma ${LZMA_INCLUDE_DIRS})
    endif ()
  endif (LZMA_FOUND)
else ()
  squash_plugin_add_for_package(lzma LibLZMA plugin_sources)
endif ()
